# chaine_editoriale

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: _generate_fixture_docx.py  _manual_gui_check.py
src/chaine_editoriale/: __init__.py  configuration.py  erreurs.py  gui.py  interface_publication.py  manifeste.py  metadata_editor_adapter.py  modeles.py  publier.py
src/chaine_editoriale.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_configuration.py  test_gui.py  test_interface_publication.py  test_metadata_editor_adapter.py  test_publier.py  test_publier_integration.py
tests/fixtures/: document_avec_image.docx  document_avec_image.metadata.json  document_minimal.docx  document_minimal.metadata.json
